--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="author" content="Sofia Adelaide S. Munda">
   <meta name="description" content="This is Sofia's biography covering her childhood, teenage years and college experience.">
+  <link rel="stylesheet" href="style.css">
 
  </head>
  <body>
